# SysAIFrame

./: README.en.md  README.md  sysaiframe.spec
src/: pyproject.toml
src/config/: models.yaml.example
src/dbus/: sysaiframe.conf
src/sdk/c/: CMakeLists.txt  sysai-config.cmake.in  sysai.pc.in
src/sdk/c/include/: sysai.h
src/sdk/c/src/: sysai_client.c  sysai_internal.h  sysai_streaming.c  sysai_types.c
src/sdk/python/: pyproject.toml
src/sdk/python/sysai/: __init__.py  client.py  streaming.py  types.py
src/sdk/rust/: Cargo.toml
src/sdk/rust/src/: client.rs  error.rs  lib.rs  streaming.rs  types.rs
src/sysai-register/: __init__.py  pyproject.toml
src/sysai-register/sysai_register/: __init__.py  register_manager.py
src/sysai-register/sysai_register/cli/: __init__.py  sysai_register.py
src/sysai_framework/: __init__.py  main.py
src/sysai_framework/api/: __init__.py
src/sysai_framework/api/v1/: __init__.py  chat.py  health.py
src/sysai_framework/cli/: __init__.py  ai_config.py  ai_discover.py  constants.py
src/sysai_framework/cli/commands/: __init__.py  gateway.py  model.py  routing.py  service.py
src/sysai_framework/cli/utils/: __init__.py  dbus_client.py  mode_switch.py  output.py
src/sysai_framework/cli/validators/: __init__.py  model_validator.py
src/sysai_framework/config/: __init__.py  cors_config.py  model_config.py
src/sysai_framework/core/: __init__.py  chat_processor.py  exceptions.py  health_checker.py  hooks.py  metrics.py  request_processor.py  response_headers.py  service_status.py  status_codes.py  streaming_utils.py
src/sysai_framework/dbus_service/: __init__.py  admin_methods.py  chat_methods.py  interface.xml  service.py  stream_handler.py  type_converter.py
src/sysai_framework/discovery/: __init__.py  discovery_manager.py
src/sysai_framework/llms/: __init__.py  http_handler.py
src/sysai_framework/llms/base/: __init__.py  transformation.py  types.py  utils.py
src/sysai_framework/llms/dashscope/: __init__.py
src/sysai_framework/llms/dashscope/chat/: __init__.py  transformation.py
src/sysai_framework/llms/deepseek/: __init__.py
src/sysai_framework/llms/deepseek/chat/: __init__.py  transformation.py
src/sysai_framework/llms/minimax/: __init__.py
src/sysai_framework/llms/minimax/chat/: __init__.py  transformation.py
src/sysai_framework/llms/moonshot/: __init__.py
src/sysai_framework/llms/moonshot/chat/: __init__.py  transformation.py
src/sysai_framework/llms/openai/: __init__.py
src/sysai_framework/llms/openai/chat/: __init__.py  gpt_transformation.py
src/sysai_framework/llms/openai_like/: __init__.py
src/sysai_framework/llms/openai_like/chat/: __init__.py  transformation.py
src/sysai_framework/llms/volcengine/: __init__.py
src/sysai_framework/llms/volcengine/chat/: __init__.py  transformation.py
src/sysai_framework/llms/zai/: __init__.py
src/sysai_framework/llms/zai/chat/: __init__.py  transformation.py
src/sysai_framework/router/: __init__.py  model_router.py  routing_strategy.py
src/sysai_framework/router/strategies/: __init__.py  least_busy.py  lowest_latency.py  round_robin.py  usage_based.py  weighted.py
src/sysai_framework/sysai_register/: __init__.py  register_manager.py
src/sysai_framework/sysai_register/cli/: __init__.py  sysai_register.py
src/sysai_framework/utils/: __init__.py  provider_utils.py
src/systemd/: sysaiframe.service
