[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysai-framework"
version = "1.0.0"
description = "CTyunOS System AI Framework"
requires-python = ">=3.8"
license = {text = "MulanPSL-2.0"}
authors = [
    {name = "SysAIFrame Team", email = "sysaiframe@ctyunos.com"}
]
maintainers = [
    {name = "SysAIFrame Team", email = "sysaiframe@ctyunos.com"}
]
keywords = ["ai", "gateway", "llm", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mulan Permissive Software License v2 (MulanPSL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=1.10.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "ruamel.yaml>=0.18.0",
    "watchdog>=3.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# D-Bus support (optional, only required on Linux for D-Bus interface)
# Install on Linux: pip install dbus-python PyGObject
# Note: These require system packages:
#   Ubuntu/Debian: apt-get install python3-dbus python3-gi libdbus-1-dev libglib2.0-dev
#   CentOS/RHEL: yum install python3-dbus python3-gobject dbus-devel glib2-devel
# dbus = [
#     "dbus-python>=1.3.2",
#     "PyGObject>=3.42.0",
# ]

[project.urls]
Homepage = "https://github.com/ctyunos/sysaiframe"
Documentation = "https://github.com/ctyunos/sysaiframe"
Repository = "https://github.com/ctyunos/sysaiframe"
Issues = "https://github.com/ctyunos/sysaiframe/issues"

[project.scripts]
ai-config = "sysai_framework.cli.ai_config:main"
ai-discover = "sysai_framework.cli.ai_discover:main"

[tool.setuptools]
packages = {find = {exclude = ["sysai-register*", "sdk*"]}}

